force-app/main/default/objects/Deployment__c/fields/Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Artifacts__c</fullName>
    <label>Artifacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>