force-app/main/default/objects/Deployment__c/fields/Post_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Steps__c</fullName>
    <label>Post Deployment Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>