force-app/main/default/objects/Deployment__c/fields/TicketLink__c.field-meta.xml
<CustomField>
    <fullName>TicketLink__c</fullName>
    <label>TicketLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>